# bioinformatic_silk

./: README.md  gui_bioinformatic_silk.py  pyproject.toml
Diptera/: Species_Index.md  aa_composition_analysis.py  aa_motifs_analysis.py  main.py  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
Diptera/ncbi_fibroin_sequences/: phylo_tree.json  phylo_tree.md
ants_bees_and_wasps/: main.py  run_generate_species_index.py
ants_etc/: Species_Index.md  aa_composition_analysis.py  aa_motifs_analysis.py  main.py  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
caddisfly/: Species_Index.md  aa_composition_analysis.py  aa_motifs_analysis.py  compare_aa_group_motifs.py  main.py  run_aa_motifs_and_compare.py  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
gnize/: README.md  README1.md
libraries/: amino_acid_group_motifs.py  aminoacids_composition_analysis_lib.py  compare_aa_group_motifs_lib.py  generate_species_index.py  generate_taxonomy_graph.py  ncbi_protein_scraper_lib.py  serine_sxn_analysis_lib.py  serine_sxn_plot_lib.py
moths_and_butterflies/: Species_Index.md  aa_composition_analysis.py  aa_motifs_analysis.py  main.py  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
spiders/: Species_Index.md  aa_composition_analysis.py  aa_motifs_analysis.py  main.py  run_generate_species_index.py  run_generate_taxonomy_graph.py  sxn_analysis_and_plotting.py
(+26526 files in other folders)
